--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description              : ""
 url                      : "https://sungjun0204.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # "/assets/images/me.jpg"
-logo                     : "/assets/images/favicon.ico"
+teaser                   : "/assets/images/me.jpg"
+logo                     : # "/assets/images/favicon.ico"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
