--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   avatar           : "/assets/images/me.jpg"
   bio              : "공부를 해 봅시다"
   location         : "South Korea"
-  email            :
+  email            : kxt1234.max@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
