--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   avatar           : "/assets/images/me.jpg"
   bio              : "공부를 해 봅시다"
   location         : "South Korea"
-  email            : kxt1234.max@gmail.com
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -287,3 +287,15 @@ defaults:
       comments: # true
       share: true
       related: true
+
+   # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: true
+      related: false
