--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", , "custom"
   google:
-    tracking_id          :
+    tracking_id          : "UA-200609961-2"
     anonymize_ip         : # true, false (default)
 
 
